zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/non-exhaustive_enum_missing_tag_type.zig
const E = enum {
    a,
    b,
    _,
};

// error
//
// :1:11: error: non-exhaustive enum missing integer tag type
// :4:5: note: marked non-exhaustive here
